--- a/src/app/features/user/components/form-user/form-user.component.scss
+++ b/src/app/features/user/components/form-user/form-user.component.scss
@@ -19,3 +19,16 @@
   margin-bottom: 10px;
   background-color: #42ce17;
 }
+
+.container{
+  display: flex;
+  flex-direction: row;
+  mat-form-field, button {
+    margin: 0 2em 0 2em;
+  }
+  button{
+    height: 3em;
+    background-color: #3f51b5;
+    color: white;
+  }
+}
