--- a/src/app/features/user/components/list-user/list-user.component.scss
+++ b/src/app/features/user/components/list-user/list-user.component.scss
@@ -34,7 +34,7 @@ mat-divider {
   flex-direction: column;
 }
 
-.deleteButton {
+.deleteButton, .userButton {
   margin: 1em;
   margin-left: 0 auto;
   flex: 1 1 auto;
