--- a/src/app/features/product/components/product/product.component.html
+++ b/src/app/features/product/components/product/product.component.html
@@ -73,7 +73,7 @@
     <div *ngIf="product.active === true">
       <div class="containerProd">
         <mat-accordion>
-          <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
+          <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false" [attr.data-product-id]="'expansion_'+product.id">
             <mat-expansion-panel-header>
               <div class="info">
                 <button mat-raised-button class="prodButton" id="{{product.name}}EditActive" (click)="modifyProduct(product.id)">
@@ -111,8 +111,8 @@
                   <mat-list-item role="listitem">
                     <span> Categories: </span>
                     <mat-chip-list #chipList aria-label="Category Selection" class="category-list">
-                      <mat-chip *ngFor="let category of product.categories">
-                        {{category.name}}
+                      <mat-chip *ngFor="let category of product.categories" class="matChipCategory">
+                        <span>{{category.name}}</span>
                         <button matChipRemove>
                           <mat-icon matChipRemove>cancel</mat-icon>
                         </button>
