--- a/src/app/features/product/components/product/product.component.html
+++ b/src/app/features/product/components/product/product.component.html
@@ -114,7 +114,7 @@
                       <mat-chip class="matChipCategory" *ngFor="let category of product.categories" (removed)="removeCategory(product,category)"[attr.data-product-id]="'categories_'+product.id+'_'+category.id">
                         {{category.name}}
                         <button matChipRemove >
-                          <mat-icon matChipRemove>cancel</mat-icon>
+                          <mat-icon matChipRemove [attr.data-product-id]="'removeCategory_'+product.id+'_'+category.id">cancel</mat-icon>
                         </button>
                       </mat-chip>
                     </mat-chip-list>
@@ -201,7 +201,7 @@
                       <mat-chip *ngFor="let category of product.categories" (removed)="removeCategory(product,category)" [attr.data-product-id]="'categories_'+product.id+'_'+category.id">
                         {{category.name}}
                         <button matChipRemove >
-                          <mat-icon matChipRemove>cancel</mat-icon>
+                          <mat-icon matChipRemove [attr.data-product-id]="'removeCategory_'+product.id+'_'+category.id">cancel</mat-icon>
                         </button>
                       </mat-chip>
                     </mat-chip-list>
