Remove warning and update tests folder

--- a/src/app/features/shop/components/products-list-shop/products-list-shop.component.scss
+++ b/src/app/features/shop/components/products-list-shop/products-list-shop.component.scss
@@ -20,7 +20,7 @@
 .divStock{
   display: flex;
   flex-direction: row;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: center;
 }
 
