--- a/src/app/features/user/components/list-user/list-user.component.html
+++ b/src/app/features/user/components/list-user/list-user.component.html
@@ -10,7 +10,7 @@
           >
             <mat-expansion-panel-header>
               <div class="info">
-                <button mat-raised-button class="userButton" color="primary" id="{{user.id}}EditActive" (click)="modifyUser(user)">
+                <button mat-raised-button class="userButton" color="primary" id="{{user.id}}EditActive" (click)="modifyUser(user)" [attr.data-user-id]="'modify_'+user.id">
                   <mat-icon>edit</mat-icon>
                 </button>
                 <button mat-raised-button class="deleteButton" (click)="deleteUser(user)">
