Test e2e modify category

--- a/src/app/features/category/components/categories/modifyCategory/modify-category/modify-category.component.html
+++ b/src/app/features/category/components/categories/modifyCategory/modify-category/modify-category.component.html
@@ -18,7 +18,8 @@
   <div class="container">
       <mat-form-field class="formContainer">
         <mat-label>Description</mat-label>
-        <input matInput id="description" formControlName="description" type="text" />
+        <input matInput id="description" formControlName="description" type="text" 
+        [attr.data-category-id]="'input_'+categories"/>
         <mat-error
           *ngIf="
           modifyCategoryForm.get('description')?.errors &&
