Added mat-table with filtering and pagination

--- a/src/app/features/shop/components/shops-list/shops-list.component.scss
+++ b/src/app/features/shop/components/shops-list/shops-list.component.scss
@@ -51,5 +51,11 @@ table{
 .viewProducts{
   background-color: #3F51B5;
   color: white;
+  margin: 10px;
+}
+
+.divButtons{
+  display: flex;
+  flex-direction: row;
 }
 
