--- a/src/app/features/shop/components/shops-list/shops-list.component.html
+++ b/src/app/features/shop/components/shops-list/shops-list.component.html
@@ -33,9 +33,15 @@
                       <span> Name: {{ shop.name }} </span>
                       <span> Adress: {{ shop.address.street }} </span>
                       <br>
-                      <button mat-raised-button class="viewProducts" color="accent" (click)="openProductList(shop)" [attr.data-shop-button]="'button_'+shop.id">
-                        View products
-                      </button>
+                      <div class="divButtons">
+                        <button mat-raised-button class="viewProducts" color="accent" (click)="openProductList(shop)" [attr.data-shop-button]="'button_'+shop.id">
+                          View products
+                        </button>
+                        <button mat-raised-button class="viewProducts" color="accent" (click)="openModifyProducts(shop)" [attr.data-shop-button]="'buttonProducts_'+shop.id">
+                          Reassignate products
+                        </button>
+                      </div>
+                      
                     </div>
                   </mat-list-item>
                   <br>
