--- a/src/app/features/shop/components/modify-products-shop/modify-products-shop.component.html
+++ b/src/app/features/shop/components/modify-products-shop/modify-products-shop.component.html
@@ -26,7 +26,13 @@
     <ng-container matColumnDef="check">
       <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
       <td mat-cell *matCellDef="let row">
-        <mat-checkbox class="example-margin"></mat-checkbox>
+          <ng-container *ngIf="productInShop(row.id) ;else noChecked">
+            <mat-checkbox class="example-margin" [checked]="true"></mat-checkbox>
+          </ng-container>
+          <ng-template #noChecked>
+            <mat-checkbox class="example-margin" [checked]="false"></mat-checkbox>
+          </ng-template>
+       
       </td>
     </ng-container>
 
