Sign up integration beetwen BackEnd and FrontEnd

--- a/src/app/features/authentication/components/sign-up/sign-up.component.html
+++ b/src/app/features/authentication/components/sign-up/sign-up.component.html
@@ -2,7 +2,7 @@
   <form [formGroup]="signUpForm">
     <span>Sign up</span>
     <mat-form-field>
-      <mat-label>User</mat-label>
+      <mat-label>Email</mat-label>
       <input type="text" matInput formControlName="email" />
       <mat-error>Invalid field</mat-error>
     </mat-form-field>
