--- a/src/app/features/shop/components/modify-products-shop/modify-products-shop.component.html
+++ b/src/app/features/shop/components/modify-products-shop/modify-products-shop.component.html
@@ -25,37 +25,36 @@
     <!-- Check Column-->
     <ng-container matColumnDef="check">
       <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
-      <td mat-cell *matCellDef="let row">
-          <ng-container *ngIf="productInShop(row.id) ;else noChecked">
-            <mat-checkbox class="example-margin" [checked]="true"></mat-checkbox>
+      <td mat-cell *matCellDef="let product">
+          <ng-container *ngIf="productInShop(product.id) ;else noChecked">
+            <mat-checkbox class="example-margin" [checked]="true" (click)="toggle(product.id)"></mat-checkbox>
           </ng-container>
           <ng-template #noChecked>
-            <mat-checkbox class="example-margin" [checked]="false"></mat-checkbox>
+            <mat-checkbox class="example-margin" [checked]="false" (click)="toggle(product.id)"></mat-checkbox>
           </ng-template>
-       
       </td>
     </ng-container>
 
     <!-- ID Column -->
     <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>ID</th>
-      <td mat-cell *matCellDef="let row">{{ row.id }}</td>
+      <td mat-cell *matCellDef="let product">{{ product.id }}</td>
     </ng-container>
 
     <!-- Name Column -->
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
-      <td mat-cell *matCellDef="let row">{{ row.name }}</td>
+      <td mat-cell *matCellDef="let product">{{ product.name }}</td>
     </ng-container>
 
     <!-- Price Column -->
     <ng-container matColumnDef="price">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Price</th>
-      <td mat-cell *matCellDef="let row">{{ row.price }}</td>
+      <td mat-cell *matCellDef="let product">{{ product.price }}</td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    <tr mat-row *matRowDef="let product; columns: displayedColumns"></tr>
 
     <!-- Row shown when there is no matching data. -->
     <tr class="mat-row" *matNoDataRow>
@@ -71,7 +70,7 @@
   ></mat-paginator>
 </div>
 <div class="divButton">
-  <button mat-raised-button color="accent" class="acceptButton">Aceptar</button>
+  <button mat-raised-button color="accent" class="acceptButton" (click)="modifyProductsShop(finalProducts,shop.id)">Aceptar</button>
   <button mat-raised-button color="accent" (click)="onNoClick()">
     Cancelar
   </button>
