--- a/src/app/page-container/component/page-container.component.html
+++ b/src/app/page-container/component/page-container.component.html
@@ -1,8 +1,8 @@
-<app-header *ngIf="auth.isLoggedIn" (onToggleMenu)="onClickMenuButton()"></app-header>
+<app-header (onToggleMenu)="onClickMenuButton()"></app-header>
 <mat-divider></mat-divider>
 <mat-drawer-container class="sidebar-container" autosize >
 
-  <mat-drawer #drawer class="sidebar" mode="side" [opened]="true" *ngIf="auth.isLoggedIn">
+  <mat-drawer #drawer class="sidebar" mode="side" [opened]="true">
     <app-sidebar></app-sidebar>
   </mat-drawer>
 
