--- a/src/app/features/shop/components/modify-products-shop/modify-products-shop.component.html
+++ b/src/app/features/shop/components/modify-products-shop/modify-products-shop.component.html
@@ -26,12 +26,12 @@
     <ng-container matColumnDef="check">
       <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
       <td mat-cell *matCellDef="let product">
-          <ng-container *ngIf="productInShop(product.id) ;else noChecked">
-            <mat-checkbox class="example-margin" [checked]="true" (click)="toggle(product.id)"></mat-checkbox>
-          </ng-container>
-          <ng-template #noChecked>
-            <mat-checkbox class="example-margin" [checked]="false" (click)="toggle(product.id)"></mat-checkbox>
-          </ng-template>
+        <mat-checkbox
+          class="example-margin"
+          [checked]="!!productInShop(product.id)"
+          [disabled]="!product.active"
+          (change)="toggle($event, product.id)"
+        ></mat-checkbox>
       </td>
     </ng-container>
 
@@ -64,13 +64,20 @@
     </tr>
   </table>
 
-  <mat-paginator
+ <!--  <mat-paginator
     [pageSizeOptions]="[5, 10, 25, 100]"
     aria-label="Select page of users"
-  ></mat-paginator>
+  ></mat-paginator> -->
 </div>
 <div class="divButton">
-  <button mat-raised-button color="accent" class="acceptButton" (click)="modifyProductsShop(finalProducts,shop.id)">Aceptar</button>
+  <button
+    mat-raised-button
+    color="accent"
+    class="acceptButton"
+    (click)="modifyProductsShop(finalProducts, shop.id)"
+  >
+    Aceptar
+  </button>
   <button mat-raised-button color="accent" (click)="onNoClick()">
     Cancelar
   </button>
