Fixed problem with stock in shops

--- a/src/app/features/shop/components/modify-products-shop/modify-products-shop.component.html
+++ b/src/app/features/shop/components/modify-products-shop/modify-products-shop.component.html
@@ -74,7 +74,7 @@
     mat-raised-button
     color="accent"
     class="acceptButton"
-    (click)="modifyProductsShop(finalProducts, shop.id)"
+    (click)="$event.stopPropagation(); modifyProductsShop(finalProducts, shop.id)"
   >
     Aceptar
   </button>
