New design and structure aplied

--- a/src/app/features/authentication/components/sign-in-sidebar/sign-in-sidebar.component.html
+++ b/src/app/features/authentication/components/sign-in-sidebar/sign-in-sidebar.component.html
@@ -13,7 +13,7 @@
 <ng-template #cerrarSesion>
   <button
     mat-raised-button
-    class="sign-in-button"
+    class="sign-up-button"
     aria-label="Go to user"
     color="warn"
     (click)="signOut()"
