--- a/src/app/features/authentication/components/sign-in-sidebar/sign-in-sidebar.component.scss
+++ b/src/app/features/authentication/components/sign-in-sidebar/sign-in-sidebar.component.scss
@@ -1,1 +1,10 @@
 
+.sign-up-button{
+  margin-bottom: 150px;
+  background-color: #CC704B;
+}
+
+.sign-up-button:hover{
+
+  background-color: #b85f3b;
+}
