--- a/src/app/features/category/components/categories/categories.component.html
+++ b/src/app/features/category/components/categories/categories.component.html
@@ -92,11 +92,9 @@
     </div>
 
   </ng-container>
-  <br>
+  <br><br>
   <h1>Inactive categories</h1>
-  <ng-container
-    *ngFor="let category of categories"
-  >
+  <ng-container *ngFor="let category of categories">
     <div class="containerProd">
       <mat-accordion>
         <mat-expansion-panel
