--- a/src/app/features/category/components/categories/categories.component.scss
+++ b/src/app/features/category/components/categories/categories.component.scss
@@ -40,7 +40,7 @@
   margin: 1em;
   margin-left: 0 auto;
   flex: 1 1 auto;
-  background-color: #3F51B5;
+  background-color: #E8C07D;
   color: white;
 }
 
@@ -51,4 +51,21 @@
 
 .listCategory{
   margin: 2em;
+}
+mat-icon{
+  color: #614124;
+}
+
+span{
+
+  color: #614124;
+
+}
+.containerProd{
+  margin-bottom: 10px;
+}
+h1{
+
+  color: #614124;
+
 }
