--- a/src/app/features/shop/components/shops-create/shops-create.component.scss
+++ b/src/app/features/shop/components/shops-create/shops-create.component.scss
@@ -34,6 +34,13 @@
 
 .buttonAdd {
   margin-top: 5px;
-  background-color: #3f51b5;
+  background-color: #E8C07D;
   color: white;
+}
+
+mat-panel-tittle{
+  color: #614124;
+}
+mat-icon{
+  color: #614124;
 }
