--- a/src/app/features/user/components/form-user/form-user.component.scss
+++ b/src/app/features/user/components/form-user/form-user.component.scss
@@ -17,7 +17,11 @@
 .addAdminBtn{
   margin-top: 10px;
   margin-bottom: 10px;
-  background-color: #42ce17;
+  background-color: #94b67b;
+}
+.addAdminBtn:hover{
+
+  background-color: #84a86a;
 }
 
 .container{
@@ -28,7 +32,15 @@
   }
   button{
     height: 3em;
-    background-color: #3f51b5;
+    background-color: #E8C07D;
     color: white;
   }
 }
+
+mat-panel-tittle{
+  color: #614124;
+}
+mat-icon{
+  color: #614124;
+}
+
