--- a/src/app/shared/components/home/home.component.scss
+++ b/src/app/shared/components/home/home.component.scss
@@ -1,8 +1,14 @@
 .sidebar-container {
   width: 100%;
   height: 100%;
+
+  background-color: #FFEDCB;
+
 }
 
 .sidebar {
   padding: 10px;
+  background-color: #f0c183;
 }
+
+
